# GDP--Hackathon

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  baseline_inference.py  check.py  check_pages.py  client.py  cloudbuild.yaml  final_check.py  graders.py  inference.py  openenv.yaml  package.json  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  run_audit_test.py  safety_env.py  scratch_test.py  vercel.json  verify_grader.py
.github/workflows/: ci.yml  vercel-deploy.yml
api/: index.py  requirements.txt
app/: adversary.py  config.py  env.py  exporter.py  grader.py  gym_wrapper.py  main.py  memory.py  models.py  policies.py  redteamer.py  tasks.py  trainer.py  ui.py
app/static/: index.html
backend/: main.py
backend/api/: audit.py
backend/core/: gemini_auditor.py
data/encoded/: scenarios.json
frontend/: index.html
server/: app.py
tests/: exhaustive_test.py  final_audit.py  test_adversary.py  test_env.py  test_models.py  test_redteamer.py
