[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "safetyguard-x"
version = "1.0.0"
description = "Adversarial AI Safety Stress Testing Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "pydantic==1.10.21",
    "python-multipart==0.0.12",
    "openenv-core>=0.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
server = "app.main:app"

[tool.openenv]
name = "safetyguard-x"
version = "1.0.0"
entry_point = "app.main:app"